--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
+
+
+
 <!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-
+   <meta charset="UTF-8">
+   
    <!--- Basic Page Needs
    ================================================== -->
-   <meta charset="utf-8">
+   <!-- <meta charset="utf-8"> -->
 	<title>Chahat Bhatia</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
    <!-- Mobile Specific Metas
    ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 
 	<!-- CSS
     ================================================== -->
@@ -28,7 +34,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="./images/download.png" >
+	<!-- <link rel="shortcut icon" href="./images/download.png" > -->
 
 </head>
 
