--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://drive.google.com/open?id=1bkEle98qcDiwvT-_CUfHXmCyUjQodUl9" target="_blank" class="button"><i class="fa fa-download"></i>Resume</a>
+                     <a href="https://drive.google.com/file/d/1bkEle98qcDiwvT-_CUfHXmCyUjQodUl9/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i>Resume</a>
                   </p>
                </div>
 
